fixed iPhone SE clipping

--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,29 @@ button:focus {
     #about-content {
         font-size: 14px;
         height: inherit;
-        padding: 35px 0 0 0;
+        padding: 10px 0 0 0;
+        max-width: 100%;
+    }
+
+    button:focus {
+        outline: 0;
+        color: white;
+    }
+    
+  }
+
+  /* iPhone SE/5 */
+  @media (min-width: 320px) and (max-device-height: 568px) {
+  
+    #about-wrap {
+        height: inherit;
+        position: relative;
+    }
+    
+    #about-content {
+        font-size: 12px;
+        height: inherit;
+        padding: 10px 0 0 0;
         max-width: 100%;
     }
 
